REGRESSION (r116331): RSS Headlines/links are missing (-webkit-box-flex broken?) https://bugs.webkit.org/show_bug.cgi?id=85991

Source/WebCore:

Fix for regression failures on deprecated flex box test cases.

Patch by Pravin D <pravind.2k4@gmail.com> on 2012-05-17
Reviewed by Eric Seidel.

Test: fast/css/deprecated-flex-box-zero-width-intrinsic-max-width.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computePreferredLogicalWidths):
Fix to use intrinsic width when the fixed width:0 , for deprecated flex boxes.

LayoutTests:

Patch by Pravin D <pravind.2k4@gmail.com> on 2012-05-17
Reviewed by Eric Seidel.

* fast/css/deprecated-flex-box-zero-width-intrinsic-max-width-expected.txt: Added.
* fast/css/deprecated-flex-box-zero-width-intrinsic-max-width.html: Added.

Canonical link: https://commits.webkit.org/104322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117413 268f45cc-cd09-0410-ab3c-d52691b4dbfc